# Anima-Public

./: .gitignore
Anima/diffusion/mcm/: CMakeLists.txt  animaCHARMEDCompartment.cxx  animaCHARMEDCompartment.h  animaCylinderGPDPulsedGradientCompartment.cxx  animaCylinderGPDPulsedGradientCompartment.h  animaGaussianMCMCost.cxx  animaGaussianMCMVariableProjectionCost.cxx  animaGaussianMCMVariableProjectionCost.h  animaMultiCompartmentModelCreator.cxx  animaMultiCompartmentModelCreator.h  animaNeumanCompartment.cxx  animaNeumanCompartment.h  animaNeumanCylinderCompartment.cxx  animaNeumanCylinderCompartment.h  animaPlaneSGPPulsedGradientCompartment.cxx  animaPlaneSGPPulsedGradientCompartment.h  animaSphereGPDPulsedGradientCompartment.cxx  animaSphereGPDPulsedGradientCompartment.h  animaStaniszCompartment.cxx  animaStaniszCompartment.h  animaStaniszCylinderCompartment.cxx  animaStaniszCylinderCompartment.h  animaStickCompartment.cxx  animaStickCompartment.h  animaTensorCompartment.cxx  animaTensorCompartment.h  animaVanGelderenCompartment.cxx  animaVanGelderenCompartment.h  animaVanGelderenCylinderCompartment.cxx  animaVanGelderenCylinderCompartment.h  animaZeppelinCompartment.cxx  animaZeppelinCompartment.h
Anima/diffusion/mcm_estimator/: animaMCMEstimator.cxx  animaMCMEstimatorImageFilter.h  animaMCMEstimatorImageFilter.hxx
Anima/diffusion/mcm_model_averaging/: animaMCMImageSimplifier.hxx  (+1 more)
Anima/filtering/: CMakeLists.txt
Anima/math-tools/: CMakeLists.txt
Anima/math-tools/special_functions/bessel_roots/: CMakeLists.txt  animaBesselRoots.cxx
(+42 files in other folders)
