if(BUILD_TESTING)

  project(animaBesselRoots)

  # ############################################################################
  # List Sources
  # ############################################################################

  list_source_files(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR})

  # ############################################################################
  # add executable
  # ############################################################################

  add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_CFILES})

  # ############################################################################
  # install
  # ############################################################################

  set_exe_install_rules(${PROJECT_NAME})

endif()
